--- a/index.html
+++ b/index.html
@@ -188,3 +188,7 @@ New arrival
 <!-- wp:paragraph -->
 <p>No 3 best selling</p>
 <!-- /wp:paragraph -->
+
+<!-- wp:image {"id":55,"className":"wp-block-image size-large is-resized"} -->
+<figure class="wp-block-image size-large is-resized"><img src="https://group7projectcom.files.wordpress.com/2024/05/img_3494.jpeg?w=640" alt="" class="wp-image-55"/><figcaption class="wp-element-caption">@carpoolvenom:allrightreserved</figcaption></figure>
+<!-- /wp:image -->
